# zin

./: CMakeLists.txt  Cargo.toml  dune-project
lib/: ast.ml  dune  lexer.ml  lexer.mli  parser.ml  token.ml  util.ml
src/: ast.hh  ast.rs  builtins.rs  environment.rs  evaluator.rs  lexer.cc  lexer.hh  lexer.rs  main.cc  main.rs  object.rs  parser.cc  parser.hh  parser.rs  token.cc  token.hh  token.rs  util.rs
test/: dune  lexer_test.ml  parser_test.ml
tests/: CMakeLists.txt  lexer_test.cc  parser_test.cc
